--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -170,11 +170,11 @@
         }
 
         img {
-            height: 100%;
+            height: 90%;
             z-index: 2;
             position: absolute;
-            top: 0;
-            right: 0;
+            top: 80px;
+            right: 140px;
             
 
             @media screen and (max-width: 1300px) 
