--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -29,7 +29,7 @@
     #sideCircleRight {
         position: absolute;
         right: 0;
-        top: 160vh;
+        top: 165vh;
         transform: rotate(180deg);
 
         @media screen and (max-width: 768px) 
@@ -58,10 +58,11 @@
         .circle {
             overflow-x:unset;
             margin-left: 100px;
-            width: 600px;
-            height: 600px;
+            width: 560px;
+            height: 560px;
             background: $lightBlue;
             border-radius: 50%;
+            margin-bottom: 20px;
 
             @media screen and (max-width: 1400px)
             {
@@ -224,7 +225,7 @@
         }
 
         .container {
-            
+            width: 60%;
             display: flex;
             flex-direction: column;
             align-items: flex-start;
