--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -14,9 +14,9 @@
         left: 0;
         top: 205vh;
 
-        @media screen and (max-width: 768px) 
+        @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
         {
-            left: -170px;
+            display: none;
         }
     }
 
@@ -26,9 +26,9 @@
         right: 0;
         top: 205vh;
 
-        @media screen and (max-width: 768px) 
+        @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
         {
-            right: -170px;
+            display: none;
         }
     }
 
@@ -41,7 +41,7 @@
         flex-direction: column;
 
         header {
-            width: 100%;
+            width: 80%;
             z-index: 1;
             height: 30%;
             display: flex;
@@ -49,17 +49,35 @@
             justify-content: center;
             flex-direction: column;
 
+            @media screen and (max-width: map-get($breakpoint, medium)) 
+            {
+                width: 90%;
+            }
+
             h1 {
-                width: 80%;
+                width: 100%;
                 text-align: center;
                 color: $darkBlue;
                 font-size: 50px;
                 font-weight: 700;
                 margin-bottom: 10px;
 
-                @media screen and (max-width: 500px) 
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
+                {
+                    font-size: 60px;
+                    line-height: 80px;
+                    overflow-x: unset;
+                }
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
                 {
                     font-size: 40px;
+                    line-height: 56px;
+                }
+                @media screen and (max-width: map-get($breakpoint, medium)) 
+                {
+                    font-size: 26px;
+                    line-height: 40px;
+                    text-align: center;
                 }
 
                 span {
@@ -68,15 +86,23 @@
             }
 
             p {
-                width: 80%;
+                width: 100%;
                 text-align: center;
                 font-size: 22px;
                 font-weight: 300;
 
-                @media screen and (max-width: 500px) 
+                @media screen and (max-width: map-get($breakpoint, large)) 
                 {
-                    font-size: 18px;
-                    line-height: 34px;
+                    font-size: 20px;
+                    line-height: 30px;
+                    margin-top: 10px;
+                    margin-bottom: 20px;
+                }
+                @media screen and (max-width: map-get($breakpoint, medium)) 
+                {
+                    font-size: 16px;
+                    line-height: 26px;
+                    text-align: center;
                 }
 
                 span {
@@ -86,11 +112,6 @@
                     {
                         display: inline;
                     }
-                }
-
-                @media screen and (max-width: 768px) 
-                {
-                    margin-bottom: 40px;
                 }
             }
         }
@@ -104,7 +125,7 @@
             flex-direction: row;
             flex-wrap: wrap;
             
-            @media screen and (max-width: 1500px) 
+            @media screen and (max-width: map-get($breakpoint, xxlarge)) 
             {
                 width: 90%;
             }
@@ -117,15 +138,15 @@
                 align-items: flex-start;
                 justify-content: center;
                 flex-direction: column;
-                @media screen and (max-width: 1125px) 
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
                 {
                     align-items: center;
                 }
-                @media screen and (max-width: 768px) 
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
                 {
                     height: 260px;
                 }
-                @media screen and (max-width: 500px) 
+                @media screen and (max-width: map-get($breakpoint, medium)) 
                 {
                     height: 300px;
                 }
@@ -136,9 +157,10 @@
                     font-weight: 700;
                     margin-bottom: 10px;
 
-                    @media screen and (max-width: 1125px) 
+                    @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
                     {
                         text-align: center;
+                        align-items: center;
                     }
 
                     span {
@@ -152,9 +174,17 @@
                     font-weight: 300;
                     margin-bottom: 10px;
 
-                    @media screen and (max-width: 1125px) 
+                    @media screen and (max-width: map-get($breakpoint, large)) 
                     {
+                        font-size: 20px;
+                        line-height: 30px;
+
                         text-align: center;
+                    }
+                    @media screen and (max-width: map-get($breakpoint, medium)) 
+                    {
+                        font-size: 16px;
+                        line-height: 26px;
                     }
                 }
 
