--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -9,17 +9,21 @@
     justify-content: center;
     flex-direction: column;
 
-    @media only screen 
-    and (min-device-width : 768px) 
-    and (max-device-width : 1024px) 
-    and (orientation : landscape)
+    @media screen and (max-height: map-get($breakpoint, large)) and (orientation: landscape)
     {
         height: 65vh;
     }
-
-    @media screen and (max-width: 500px) 
+    @media screen and (max-height: map-get($breakpoint, medium)) and (orientation: landscape)
     {
-        height: 60vh;
+        height: 140vh;
+    }
+    @media screen and (max-width: map-get($breakpoint, medium))
+    {
+        height: 65vh;
+    }
+    @media screen and (max-width: map-get($breakpoint, small))
+    {
+        height: 80vh;
     }
 
     .container {
@@ -38,21 +42,17 @@
             flex-direction: column;
             overflow-x: unset;
 
-            @media screen and (max-width: 1400px) 
+            @media screen and (max-width: map-get($breakpoint, xlarge)) 
             {
                 width: 70%;
             }
-            @media screen and (max-width: 1000px) 
-            {
-                width: 80%;
-            }
-            @media screen and (max-width: 768px) 
+            @media screen and (max-width: map-get($breakpoint, large)) 
             {
                 width: 90%;
             }
-            @media screen and (max-width: 500px) 
+            @media screen and (max-width: map-get($breakpoint, medium)) 
             {
-                width: 100%;
+                width: 95%;
             }
 
             h1 {
@@ -61,21 +61,15 @@
                 text-align: center;
                 color: $darkBlue;
 
-                @media screen and (max-width: 768px) and (orientation: landscape)
+                @media screen and (max-width: map-get($breakpoint, large)) 
                 {
                     font-size: 46px;
                     line-height: 66px;
                 }
-                @media only screen 
-                and (min-device-width : 768px) 
-                and (max-device-width : 1024px) 
-                and (orientation : landscape)
+                @media screen and (max-width: map-get($breakpoint, medium)) 
                 {
                     font-size: 36px;
-                }
-                @media screen and (max-width: 500px) 
-                {
-                    font-size: 36px;
+                    line-height: 60px;
                 }
             }
 
@@ -86,14 +80,7 @@
                 color: $darkBlue;
                 margin-bottom: 20px;
 
-                @media only screen 
-                and (min-device-width : 768px) 
-                and (max-device-width : 1024px) 
-                and (orientation : landscape)
-                {
-                    font-size: 18px;
-                }
-                @media screen and (max-width: 500px) 
+                @media screen and (max-width: map-get($breakpoint, medium)) 
                 {
                     font-size: 18px;
                 }
@@ -138,19 +125,15 @@
             display: flex;
             justify-content: space-between;
 
-            @media screen and (max-width: 1400px) 
+            @media screen and (max-width: map-get($breakpoint, xlarge)) 
             {
                 width: 70%;
             }
-            @media screen and (max-width: 1000px) 
-            {
-                width: 80%;
-            }
-            @media screen and (max-width: 768px) 
+            @media screen and (max-width: map-get($breakpoint, large)) 
             {
                 width: 90%;
             }
-            @media screen and (max-width: 500px) 
+            @media screen and (max-width: map-get($breakpoint, medium)) 
             {
                 flex-direction: column;
                 justify-content: center;
@@ -163,7 +146,7 @@
                 flex-direction: column;
                 align-items: flex-start;
 
-                @media screen and (max-width: 500px) 
+                @media screen and (max-width: map-get($breakpoint, medium)) 
                 {
                     align-items: center;
                 }
@@ -178,7 +161,7 @@
                     color: $darkBlue;
                     overflow-x: unset;
 
-                    @media screen and (max-width: 500px) 
+                    @media screen and (max-width: map-get($breakpoint, medium)) 
                     {
                         text-align: center;
                         font-size: 14px;
@@ -196,7 +179,7 @@
                     height: 30px;
                     margin-left: 10px;
 
-                    @media screen and (max-width: 500px) 
+                    @media screen and (max-width: map-get($breakpoint, medium)) 
                     {
                         height: 40px;
                         margin-left: unset;
@@ -216,22 +199,20 @@
             flex-direction: row;
             justify-content: space-between;
             margin-top: 30px;
+            overflow-x: unset;
 
-            @media screen and (max-width: 1400px) 
+            @media screen and (max-width: map-get($breakpoint, xlarge))  
             {
                 width: 70%;
             }
-            @media screen and (max-width: 1000px) 
-            {
-                width: 80%;
-            }
-            @media screen and (max-width: 768px) 
+            @media screen and (max-width: map-get($breakpoint, large)) 
             {
                 width: 90%;
             }
 
             .col {
-                @media screen and (max-width: 500px) 
+                overflow-x: unset;
+                @media screen and (max-width: map-get($breakpoint, medium)) 
                 {
                     display: none;
                 }
@@ -268,7 +249,7 @@
         display: flex;
         align-items: flex-end;
 
-        @media screen and (max-width: 500px) 
+        @media screen and (max-width: map-get($breakpoint, medium)) 
         {
             align-items: center;
         }
