--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -9,10 +9,27 @@
     justify-content: center;
     flex-direction: row;
 
-    @media screen and (max-width: 500px) 
+    @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
     {
-        height: 140vh;
+        height: 80vh;
+    }
+    @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
+    {
+        height: 80vh;
+    }
+    @media screen and (max-width: map-get($breakpoint, medium)) 
+    {
+        height: 130vh;
         flex-direction: column;
+    }
+    @media screen and (max-width: map-get($breakpoint, small)) 
+    {
+        height: 170vh;
+        flex-direction: column;
+    }
+    @media screen and (max-height: map-get($breakpoint, medium)) and (orientation: landscape)
+    {
+        height: 160vh;
     }
 
     #sideCircle {
@@ -20,9 +37,14 @@
         left: 0;
         top: 120vh;
 
-        @media screen and (max-width: 768px) 
+        @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
         {
-            left: -110px;
+            left: -170px;
+            top: 115vh;
+        }
+        @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
+        {
+            display: none;
         }
     }
 
@@ -32,12 +54,16 @@
         top: 165vh;
         transform: rotate(180deg);
 
-        @media screen and (max-width: 768px) 
+        @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
         {
+            top: 140vh;
             right: -110px;
         }
+        @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
+        {
+            display: none;
+        }
     }
-
 
     .left {
         z-index: 3;
@@ -49,10 +75,15 @@
         justify-content: center;
         overflow-x:unset;
 
-        @media screen and (max-width: 500px) 
+        @media screen and (max-width: map-get($breakpoint, medium)) 
         {
-            height: 30%;
             width: 100%;
+            height: 50%;
+            margin-bottom: 40px;
+        }
+        @media screen and (max-width: map-get($breakpoint, small)) 
+        {
+            margin-bottom: 0px;
         }
         
         .circle {
@@ -64,22 +95,24 @@
             border-radius: 50%;
             margin-bottom: 20px;
 
-            @media screen and (max-width: 1400px)
+            @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
             {
-                width: 460px;
-                height: 460px;
+                width: 440px;
+                height: 440px;
+                margin-left: 0px;
             }
-            @media screen and (max-width: 1200px)
+            @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
             {
                 width: 360px;
                 height: 360px;
-                margin-left: 60px;
-            }
-            @media screen and (max-width: 768px)
-            {
                 margin-left: 0px;
             }
-            @media screen and (max-width: 500px) 
+            @media screen and (max-width: map-get($breakpoint, medium)) 
+            {
+                width: 340px;
+                height: 340px;
+            }
+            @media screen and (max-width: map-get($breakpoint, small)) 
             {
                 width: 300px;
                 height: 300px;
@@ -92,21 +125,24 @@
             height: 70%;
             width: 100%;
 
-            @media screen and (max-width: 1200px)
-            {
-                height: 60%;
-                margin-left: 30px;
-            }
-            @media screen and (max-width: 768px)
+            @media screen and (max-width: map-get($breakpoint, large)) 
             {
                 height: 50%;
                 margin-left: 0px;
             }
-            @media screen and (max-width: 500px) 
+            @media screen and (max-width: map-get($breakpoint, medium)) 
             {
-                height: 60%;
+                height: 70%;
             }
-            
+            @media screen and (max-width: map-get($breakpoint, small)) 
+            {
+                height: 80%;
+            }
+            @media screen and (max-height: map-get($breakpoint, medium)) and (orientation: landscape)
+            {
+                height: unset;
+                width: 40%;
+            }
             
             &#phoneGrey {
                 opacity: 0;
@@ -217,11 +253,12 @@
         justify-content: center;
         overflow-x:unset;
 
-        @media screen and (max-width: 500px) 
+        @media screen and (max-width: map-get($breakpoint, medium)) 
         {
-            height: 70%;
-            align-items: center;
             width: 100%;
+            height: 50%;
+            align-items: center;
+            justify-content: flex-start;
         }
 
         .container {
@@ -231,14 +268,13 @@
             align-items: flex-start;
             justify-content: center;
 
-            @media screen and (max-width: 1300px)
+            @media screen and (max-width: map-get($breakpoint, xxlarge)) 
             {
                 width: 90%;
             }
-            @media screen and (max-width: 500px) 
+            @media screen and (max-width: map-get($breakpoint, medium)) 
             {
                 align-items: center;
-                text-align: center;
             }
         
             h1 {
@@ -246,19 +282,23 @@
                 font-size: 70px;
                 line-height: 100px;
                 color: $darkBlue;
+                overflow-x: unset;
 
-                @media screen and (max-width: 1300px)
+                
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
                 {
-                    font-size: 50px;
-                    line-height: 70px;
+                    font-size: 60px;
+                    line-height: 80px;
                 }
-                @media screen and (max-width: 1000px)
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
                 {
                     font-size: 40px;
-                    line-height: 60px;
+                    line-height: 56px;
                 }
-                @media screen and (max-width: 500px) 
+                @media screen and (max-width: map-get($breakpoint, medium)) 
                 {
+                    font-size: 26px;
+                    line-height: 40px;
                     text-align: center;
                 }
             }
@@ -270,6 +310,7 @@
                 text-align: left;
                 color: transparent;
                 -webkit-text-stroke: 2px $midBlue;
+                overflow-x: unset;
                 &::before {
                     content: attr(data-text);
                     position: absolute;
@@ -293,15 +334,20 @@
                         }
                     }
                 }
-                @media screen and (max-width: 1300px)
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
                 {
-                    font-size: 50px;
-                    line-height: 70px;
+                    -webkit-text-stroke: 1px $midBlue;
+                    font-size: 60px;
+                    line-height: 80px;
                 }
-                @media screen and (max-width: 1000px)
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
                 {
                     font-size: 40px;
-                    line-height: 60px;
+                    line-height: 56px;
+                }
+                @media screen and (max-width: map-get($breakpoint, medium)) 
+                {
+                    font-size: 40px;
                 }
             }
 
@@ -318,18 +364,18 @@
                     font-weight: 600;
                 }
 
-                @media screen and (max-width: 1300px)
+                @media screen and (max-width: map-get($breakpoint, large)) 
                 {
                     font-size: 20px;
-                    line-height: 38px;
+                    line-height: 30px;
                 }
-                @media screen and (max-width: 1000px)
+                @media screen and (max-width: map-get($breakpoint, medium)) 
                 {
-                    font-size: 18px;
-                    line-height: 34px;
-                }
-                @media screen and (max-width: 500px) 
-                {
+                    width: 100%;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                    font-size: 16px;
+                    line-height: 26px;
                     text-align: center;
                 }
             }
