--- a/src/components/partners/partners.scss
+++ b/src/components/partners/partners.scss
@@ -1,7 +1,7 @@
 @import "../../global.scss";
 
 .partners {
-    max-height: 500vh;
+    max-height: 1000vh;
     width: 100%;
     background-color: white;
     display: flex;
@@ -23,12 +23,12 @@
             height: 20%;
             width: 60%;
 
-            @media screen and (max-width: 1600px) 
+            @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
             {
                 width: 80%;
             }
 
-            @media screen and (max-width: 768px) 
+            @media screen and (max-width: map-get($breakpoint, medium))
             {
                 width: 90%;
             }
@@ -40,9 +40,24 @@
                 font-weight: 700;
                 margin-bottom: 10px;
 
-                @media screen and (max-width: 500px) 
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
+                {
+                    font-size: 50px;
+                    line-height: 100px;
+                }
+                @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
                 {
                     font-size: 40px;
+                    line-height: 56px;
+                }
+                @media screen and (max-width: map-get($breakpoint, medium)) 
+                {
+                    text-align: center;
+                }
+                @media screen and (max-width: map-get($breakpoint, small)) 
+                {
+                    font-size: 20px;
+                    line-height: 30px;
                 }
 
                 span {
@@ -55,9 +70,24 @@
                 font-size: 22px;
                 font-weight: 300;
 
-                @media screen and (max-width: 500px) 
+                @media screen and (max-width: map-get($breakpoint, large)) 
                 {
-                    font-size: 18px;
+                    font-size: 20px;
+                    line-height: 30px;
+                }
+                @media screen and (max-width: map-get($breakpoint, medium)) 
+                {
+                    width: 100%;
+                    margin-top: 20px;
+                    margin-bottom: 20px;
+                    font-size: 16px;
+                    line-height: 26px;
+                    text-align: center;
+                }
+                @media screen and (max-width: map-get($breakpoint, small)) 
+                {
+                    font-size: 14px;
+                    line-height: 22px;
                 }
 
 
