--- a/src/components/details/details.scss
+++ b/src/components/details/details.scss
@@ -3,7 +3,7 @@
 .details {
     max-height: 500vh;
     width: 100%;
-    background-color: white;
+    background-color: $darkBlue;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -12,7 +12,7 @@
     #sideCircleLeft {
         position: absolute;
         left: 0;
-        top: 205vh;
+        height: 75vh;
 
         @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
         {
@@ -24,7 +24,7 @@
         z-index: 0;
         position: absolute;
         right: 0;
-        top: 205vh;
+        height: 75vh;
 
         @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
         {
@@ -33,6 +33,8 @@
     }
 
     .container {
+        margin-top: 100px;
+        margin-bottom: 100px;
         width: 100%;
         height: 100%;
         display: flex;
@@ -57,10 +59,10 @@
             h1 {
                 width: 100%;
                 text-align: center;
-                color: $darkBlue;
+                color: white;
                 font-size: 50px;
                 font-weight: 700;
-                margin-bottom: 10px;
+                margin-bottom: 5px;
 
                 @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
                 {
@@ -88,7 +90,8 @@
             p {
                 width: 100%;
                 text-align: center;
-                font-size: 22px;
+                color: white;
+                font-size: 20px;
                 font-weight: 300;
 
                 @media screen and (max-width: map-get($breakpoint, large)) 
@@ -152,10 +155,10 @@
                 }
 
                 h1 {
-                    color: $darkBlue;
-                    font-size: 24px;
+                    color: white;
+                    font-size: 22px;
                     font-weight: 700;
-                    margin-bottom: 10px;
+                    margin-bottom: 5px;
 
                     @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
                     {
@@ -169,7 +172,7 @@
                 }
 
                 p {
-                    color: $darkBlue;
+                    color: white;
                     font-size: 18px;
                     font-weight: 300;
                     margin-bottom: 10px;
