--- a/src/global.scss
+++ b/src/global.scss
@@ -1,7 +1,9 @@
 $darkBlue: #323353;
+$midDarkBlue: #484A77;
 $midBlue: #4D9BE6;
 $lightBlue: #8FD3FF;
 $grey: #9494A2;
+$textGrey: #9BABB2;
 
 $breakpoint: (
   small: 320px,
