--- a/src/components/productDropDown/productDropDown.scss
+++ b/src/components/productDropDown/productDropDown.scss
@@ -9,15 +9,14 @@
     .menuContainer {
         z-index: 9;
         position: absolute;
-        top: -120px;
+        top: 80px;
         width: 60%;
-        height: 150px;
-        background-color: rgba(255, 255, 255, 0.50);
-        backdrop-filter: blur(5px);
-        border-bottom-right-radius: 25px;
-        border-bottom-left-radius: 25px;
+        height: 160px;
+        background-color: #4d9ce617;
+        backdrop-filter: blur(6px);
+        border-radius: 25px;
         opacity: 0;
-        transition: all 0.5s ease;
+        transition: all .5s ease;
         overflow-x: unset;
 
         &.active {
@@ -58,7 +57,7 @@
                         overflow-x: unset;
 
                         &:hover {
-                            color: $midBlue;
+                            color: $blue;
                         }
                     }
 
