--- a/src/global.scss
+++ b/src/global.scss
@@ -1,3 +1,11 @@
+$black: #2E222F;
+$blue: #4D9BE6;
+$yellow: #F9C22B;
+$green: #91DB69;
+$darkGreen: #1EBC73;
+$purple: #A884F3;
+
+
 $darkBlue: #323353;
 $midDarkBlue: #484A77;
 $midBlue: #4D9BE6;
