--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -3,7 +3,7 @@
 .footer {
     height: 55vh;
     width: 100%;
-    background-color: #ECF1EE;
+    background: linear-gradient(135deg, rgba(249,194,43,.3) 0%, rgba(77,155,230,.3) 50%, rgba(145,219,105,.3) 100%);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -55,7 +55,7 @@
                 margin-top: 5px;
                 font-size: 50px;
                 text-align: center;
-                color: $darkBlue;
+                color: $black;
 
                 @media screen and (max-width: map-get($breakpoint, large)) 
                 {
@@ -70,10 +70,10 @@
             }
 
             p {
-                font-weight: 300;
+                font-weight: 400;
                 font-size: 18px;
                 text-align: center;
-                color: $darkBlue;
+                color: $black;
                 margin-bottom: 20px;
             }
 
@@ -99,13 +99,13 @@
                 button {
                     cursor: pointer;
                     border: none;
-                    background-color: $midBlue;
+                    background-color: $green;
                     flex: 1;
                     display: flex;
                     justify-content: center;
                     align-items: center;
                     &:hover {
-                        background-color: $darkBlue;
+                        background-color: $darkGreen;
                     }
                 }
             }
@@ -143,13 +143,13 @@
                 }
 
                 img {
-                    height: 40px;
+                    height: 30px;
                 }
 
                 h1 {
                     font-weight: 300;
                     font-size: 16px;
-                    color: $darkBlue;
+                    color: $black;
                     overflow-x: unset;
 
                     @media screen and (max-width: map-get($breakpoint, medium)) 
@@ -211,9 +211,8 @@
                 h1 {
                     font-weight: 700;
                     font-size: 16px;
-                    color: $darkBlue;
-                    margin-bottom: 10px;
-                    
+                    color: $black;
+                    margin-bottom: 10px;  
                 }
 
                 ul {
@@ -223,7 +222,7 @@
                     li {
                         cursor: pointer;
                         margin-bottom: 5px;
-                        font-weight: 300;
+                        font-weight: 400;
                         font-size: 16px;
                         color: $grey;
 
