--- a/src/components/info/info.scss
+++ b/src/components/info/info.scss
@@ -39,13 +39,31 @@
         justify-content: center;
         position: absolute;
 
+        @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
+        {
+            height: 80vh;
+        }
+        @media screen and (max-width: map-get($breakpoint, large)) and (max-height: map-get($breakpoint, large)) 
+        {
+            height: 80vh;
+        }
+
         .earth {
+            position: absolute;
             height: 100%;
             width: 100%;
-            background-image: url("../../earth.png");
+            background-image: url("../../earth.jpg");
             background-repeat: no-repeat;
+            background-size: cover;
             background-position-x: center;
             background-position-y: top;
+        }
+
+        .cover {
+            position: absolute;
+            height: 100%;
+            width: 100%;
+            background: linear-gradient(135deg, rgba(249,194,43,.7) 0%, rgba(77,155,230,.7) 50%, rgba(145,219,105,.7) 100%);
         }
     }
 
@@ -275,7 +293,7 @@
                     line-height: 90px;
                     text-align: left;
                     color: transparent;
-                    -webkit-text-stroke: 2px $midBlue;
+                    -webkit-text-stroke: 2px $black;
                     overflow-x: unset;
                     &::before {
                         content: attr(data-text);
@@ -284,9 +302,9 @@
                         left: 0;
                         width: 0;
                         height: 100%;
-                        color: $midBlue;
-                        -webkit-text-stroke: 0px $midBlue;
-                        border-right: 4px solid $midBlue;
+                        color: $black;
+                        -webkit-text-stroke: 0px $black;
+                        border-right: 4px solid $black;
                         overflow: hidden;
                         animation: animate 6s linear infinite;
                         @keyframes animate {
@@ -302,7 +320,7 @@
                     }
                     @media screen and (max-width: map-get($breakpoint, large)) and (max-height: 1366px) 
                     {
-                        -webkit-text-stroke: 1px $midBlue;
+                        -webkit-text-stroke: 1px $black;
                         font-size: 60px;
                         line-height: 80px;
                     }
@@ -348,7 +366,7 @@
 
                 .button {
                     padding: 20px 25px;
-                    background-color: $midBlue;
+                    background-color: $green;
                     border-radius: 5px;
                     color: white;
                     font-size: 18px;
@@ -356,7 +374,7 @@
                     text-decoration: none;
 
                     &:hover {
-                        background-color: $darkBlue;
+                        background-color: $darkGreen;
                     }
                 }
             }
